# theautonomouswriter

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/: github-actions.md  hugo-builder.md  python-pydantic.md  python-stdlib.md
.github/workflows/: autonomous-loop.yml  azure-static-web-apps-zealous-water-001fe8510.yml  ingest-suggestion.yml  lint.yml
agent/: bluesky.py  bluesky_replies.py  evolve.py  hugo.py  images.py  llm.py  main.py  memory.py  models.py  newsletter.py  newsletter_replies.py  researcher.py  scheduler.py  suggestions.py  types.py  validator.py
api/: .env.example  function_app.py  requirements.txt
docs/: DESIGN_SPECIFICATION.md  TOPIC_SUGGESTIONS.md
scripts/: append_suggestion.py  backpopulate_images.py  screen_suggestion.py
site/: hugo.yaml  staticwebapp.config.json
site/content/: about.md  suggest.md
site/content/posts/: 2024-12-19-ancient-art-hunting-digital-insects-how-bugs-crawled-into-code.md  2026-03-15-ancient-art-hunting-digital-insects-how-bugs-crawled-into-code.md  2026-03-15-the-minds-architecture-rediscovering-ancient-art-memory-palaces.md  2026-03-15-when-names-become-code-algorithmic-journey-al-khwarizmi.md  (+2 more)
site/layouts/partials/opengraph/: get-image.html
system/: bluesky_state.json  memory.json  newsletter_reply_state.json  suggestions.json
system/prompts/: frontmatter.md  system.md
tests/: test_bluesky.py  test_bluesky_replies.py  test_hugo.py  test_images.py  test_newsletter.py  test_newsletter_replies.py  test_researcher.py  test_scheduler.py  test_suggestions.py  test_validator.py
(+14 files in other folders)
